Fix sticky details header on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -334,6 +334,11 @@ a.tag:hover {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
     z-index: 39;
   }
+
+  .details-header-sticky {
+    left: 0px !important;
+    padding-left: 22.5px;
+  }
 }
 
 // Expand/collapse course list
